--- a/UniversityCourseManagement/Content/Site.css
+++ b/UniversityCourseManagement/Content/Site.css
@@ -1,6 +1,4 @@
-﻿
-
-/* Set padding to keep content from hitting the edges */
+﻿/* Set padding to keep content from hitting the edges */
 .body-content {
     padding-left: 15px;
     padding-right: 15px;
